--- a/Hangman.css
+++ b/Hangman.css
@@ -7,20 +7,18 @@
 .bodycontainer{
 	display: flex;
 	justify-content: center;
-	align-items: center;
 	background: rgb(230, 170, 170);
 	min-height: 100vh;
 }
 
 .container{
 	min-width: 70%;
-	height: auto;
+	height: fit-content;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	
 	align-items: center;
 	background: rgb(196, 125, 125);
-	border-radius: 10px;
 }
 .header{
 	width: 100%;
@@ -30,8 +28,6 @@
 	padding-bottom:20px ;
 	color: blanchedalmond;
 	overflow: hidden;
-	border-top-left-radius:10px;
-	border-top-right-radius:10px; 
 	margin-bottom: 10px;
 }
 .inp{
@@ -56,7 +52,7 @@ input{
 	font-size: 1rem;
 	font-weight: bold;
 	background-color: rgb(66, 9, 17);
-	border-radius: 3px;
+	border-radius: 7px;
 	color: blanchedalmond;
 	margin-top: 0.5rem;
 	margin-bottom: 0.3rem;
@@ -68,7 +64,7 @@ input{
 	border: none;
 	outline: none;
 	width: 100%;
-	height: 1.5rem;
+	height: 2rem;
 	font-weight: bold;
 	background-color: rgb(66, 9, 17);
 	border-radius: 3px;
@@ -102,8 +98,8 @@ td{
 	}
 	.container{
 		width: 100%;
-		height: auto;
 		border-radius: 0;
+		margin-top: 0px;
 	}
 	.header{
 		border-radius: 0;
