--- a/Hangman.css
+++ b/Hangman.css
@@ -22,26 +22,28 @@
 }
 .header{
 	width: 100%;
+	height: 3rem;
 	background-color: rgb(70, 0, 10);
-	text-align: center;
-	padding-top: 20px;
-	padding-bottom:20px ;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	color: blanchedalmond;
-	overflow: hidden;
 	margin-bottom: 10px;
+	font-size: 2rem;
 }
 .inp{
-	width: 40%;
+	width: 70%;
 	display: flex;
 	flex-direction: column;
 }
 input{
-	border: 1px solid rgb(70, 0, 10);
-	border-radius: 3px;
+	border: 1px solid rgb(0, 0, 0);
+	border-radius: 5px;
 	height: 2rem;
 	font-size: 1rem;
 	outline: none;
 	background-color: rgb(231, 191, 197);
+	width: 100%;
 }
 
 #addbtn{
@@ -52,7 +54,7 @@ input{
 	font-size: 1rem;
 	font-weight: bold;
 	background-color: rgb(66, 9, 17);
-	border-radius: 7px;
+	border-radius: 5px;
 	color: blanchedalmond;
 	margin-top: 0.5rem;
 	margin-bottom: 0.3rem;
