--- a/Storage.css
+++ b/Storage.css
@@ -1,7 +1,79 @@
+
+*{
+    margin: 0;
+    font-family: "Kumbh Sans", sans-serif;
+}
+body{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(177, 201, 189);
+}
 .storage{
     display: flex;
+    flex-direction: column;
+    padding: 2rem;
 }
 .allbtns{
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#outp{
+    width: 95%;
+    min-height: 2rem;
+    border:1px solid rgb(3, 49, 49);
+    overflow: hidden;
+    word-wrap: normal;
+    padding: 8px;
+    text-align: justify;
+}
+.container{
+    width: 50%;
+    display: flex;
     flex-direction: column;
+    align-items: center;
+    background-color: rgb(177, 201, 189);
+}
+.heaader{
+    height: 3rem;
+    background-color: rgb(3, 49, 49);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    color: rgb(252, 252, 252);
+}
+input{
+    border: 2px solid rgb(0, 66, 66);
+    outline: none;
+    background-color: rgb(139, 170, 170);
+    margin-bottom: 1rem;
+    height: 2rem;
+    border-radius: 5px;
+    font-size: 1rem;
+    width: 100%;
+}
+button{
+    height: 2.5rem;
+    width: 9rem;
+    background-color: rgb(0, 77, 77);
+    outline: none;
+    border:none;
+    font-size: 0.9rem;
+    font-weight: bold;
+    color: rgb(185, 211, 211);
+    margin: 2px;
+    border-radius: 5px;
+}
+
+button:active{
+    background-color: rgb(1, 109, 109);
+}
+
+
+@media screen and (max-width:960px){
+    .container{
+        width: 100%;
+    }
 }
