--- a/Storage.css
+++ b/Storage.css
@@ -27,6 +27,9 @@ body{
     padding: 8px;
     text-align: justify;
 }
+#outpara{
+    word-wrap: break-word;
+}
 .container{
     width: 50%;
     display: flex;
